# gsheet-sql-python

./: .gitignore  LICENSE  README.md  pyproject.toml  specs.md
gsheets_sql/: __init__.py  cache.py  connection.py  database.py  exceptions.py  repl.py  schema.py  table.py
gsheets_sql/query/: engine.py
tests/: test_cache.py  test_query.py  test_schema.py
